# Draft-raft

./: .gitignore  README.md  main.py  optimize.sh  pyproject.toml  run.example.sh
Project/: QAOA_algo.py  data_training.py  sms_alerts.py  traffic_app.py
data/: cleaned_data.csv  result1  results.csv  results0.csv  results1.csv  results10.csv  results11.csv  results12.csv  results13.csv  results14.csv  results15.csv  results16.csv  results17.csv  results18.csv  results19.csv  results2.csv  results20.csv  results21.csv  results22.csv  results23.csv  results3.csv  results4.csv  results5.csv  results6.csv  results7.csv  results8.csv  results9.csv
project/: QAOA_algo.py  data_clean.py  data_training.py  lab.py  optimize.py  store.py  traffic_app.py
project_V1.1/: QAOA_algo.py  data_clean.py  sms_alerts.py  traffic_app.py
